writing about hugrstore

--- a/chapter03.tex
+++ b/chapter03.tex
@@ -125,7 +125,7 @@ The demonstrator car is composed with two LIDAR laser scanner sensors, as we saw
 
 In the Figure~\ref{fig:motion:framework}, we have represented the general framework modules for detecting the moving parts, our algorithm core is contained in the motion detection module, which will be explored later. We are making usage of two LIDARs, they provide several information from different specifications (different ranges and FoV), thus we use a fusion module which is responsible for gathering the information provided by all of the LIDAR in a consistent manner.
 
-\begin{figure}[h]
+\begin{figure}[H]
    \centering
      \begin{tabular}{lr}
        \includegraphics[scale=0.30]{img/fig:motion:framework}
