--- a/trunk/report.bib
+++ b/trunk/report.bib
@@ -388,3 +388,12 @@
     url = {http://www.amazon.com/exec/obidos/redirect?tag=citeulike07-20\&path=ASIN/0262201623},
     year = {2005}
 }
+
+@ONLINE{dds,
+author = {Object Management Group},
+title = {Data Distribution Service Portal},
+month = may,
+year = {2012},
+url = {http://portals.omg.org/dds/}
+}
+
