--- a/trunk/report.bib
+++ b/trunk/report.bib
@@ -346,6 +346,20 @@
  address = {New York, NY, USA},
 } 
 
+%z20
+
+@INPROCEEDINGS{4650636, 
+author={Katz, R. and Nieto, J. and Nebot, E.}, 
+booktitle={Intelligent Robots and Systems, 2008. IROS 2008. IEEE/RSJ International Conference on}, title={Probabilistic scheme for laser based motion detection}, 
+year={2008}, 
+month={sept.}, 
+volume={}, 
+number={}, 
+pages={161 -166}, 
+keywords={laser based motion detection;laser scanner;mobile robot vision;mobile vehicle;probabilistic occlusion checking;probability decision problem;robust classification procedure;scan registration algorithm;sensor noise;spatio-temporal correspondence procedure;tracking procedure;urban environment;image classification;image registration;laser ranging;mobile robots;optical scanners;optical tracking;path planning;probability;robot vision;vehicles;}, 
+doi={10.1109/IROS.2008.4650636}, 
+ISSN={},}
+
 %There exists no eletronic version
 
 @phdthesis{Elfes:1989:OGP:916528,
