--- a/report.tex
+++ b/report.tex
@@ -168,7 +168,8 @@ $[$Prof/Dr/Mrs/Mr$]$ $<$first-name last-name$>$\\
 
 \backmatter
 
-\bibliographystyle{plain}
+%\bibliographystyle{plain}
+\bibliographystyle{unsrt}
 \bibliography{report}{}
 
 \end{document}
