--- a/trunk/abstract.tex
+++ b/trunk/abstract.tex
@@ -1,4 +1,4 @@
-Scene understanding is a fundamental process in robotics, several techniques have been applied with the intent to better classify the objects in the scene with more quality and/or a better performance. The occupancy grid is refereed by many as one of the major tools to represent the environment, gathering precision and performance in the representation. The algorithm proposed by this document extracts the dynamic objects from the environment with the smallest possible number of samples using occupancy grid mapping, resulting in a lightweight real-time application. The main focus is to apply it, in the future, for  Advanced Driving Assistence Systems(ADAS). Throughout this document we will show some issues imposed by the usage of our algorithm in ADAS, and solution for those problems. Qualitative results of the algorithm implementation in a Lexus LS600h car will be shown.
+Scene understanding is a fundamental process in robotics, several techniques have been applied with the intent to better classify the objects in the scene with more quality and/or a better performance. The occupancy grid is refereed by many as one of the major tools to represent the environment, gathering precision and performance in the representation. The algorithm proposed by this document extracts the dynamic objects from the environment with the smallest possible number of samples using occupancy grid mapping, resulting in a lightweight real-time application. The main focus is to apply it, in the future, for  Advanced Driving Assistence Systems(ADAS). Throughout this document we will show some issues imposed by the usage of our algorithm in ADAS, and solution for those problems. Qualitative results of the algorithm implementation in a Lexus LS600h car for the real road application will be shown, followed by a discussion about the advantages and limitations of the method.
 
 %\end{abstract}
 %\abstractintoc
