--- a/trunk/report.bib
+++ b/trunk/report.bib
@@ -360,6 +360,49 @@ keywords={laser based motion detection;laser scanner;mobile robot vision;mobile 
 doi={10.1109/IROS.2008.4650636}, 
 ISSN={},}
 
+%z21
+
+@inproceedings{Lowe:1999:ORL:850924.851523,
+ author = {Lowe, David G.},
+ title = {Object Recognition from Local Scale-Invariant Features},
+ booktitle = {Proceedings of the International Conference on Computer Vision-Volume 2 - Volume 2},
+ series = {ICCV '99},
+ year = {1999},
+ isbn = {0-7695-0164-8},
+ pages = {1150--},
+ url = {http://dl.acm.org/citation.cfm?id=850924.851523},
+ acmid = {851523},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+} 
+
+%z22
+
+@incollection{Ballard:1987:GHT:33517.33574,
+ author = {Ballard, D. H.},
+ chapter = {Generalizing the hough transform to detect arbitrary shapes},
+ title = {Readings in computer vision: issues, problems, principles, and paradigms},
+ editor = {Fischler, Martin A. and Firschein, Oscar},
+ year = {1987},
+ isbn = {0-934613-33-8},
+ pages = {714--725},
+ numpages = {12},
+ url = {http://dl.acm.org/citation.cfm?id=33517.33574},
+ acmid = {33574},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
+} 
+
+%z23
+
+@article{Hurt_1981, 
+	title={MOTORCYCLE ACCIDENT CAUSE FACTORS AND IDENTIFICATION OF COUNTERMEASURES VOLUME I : TECHNICAL REPORT}, 		volume={I}, 
+	journal={Reproduction}, 
+	author={Hurt, H H}, 
+	year={1981}, 
+	pages={435}
+}
+
 %There exists no eletronic version
 
 @phdthesis{Elfes:1989:OGP:916528,
@@ -411,3 +454,12 @@ year = {2012},
 url = {http://portals.omg.org/dds/}
 }
 
+@book{mulcahy2011pmp,
+  title={PMP Exam Prep: Rapid Learning to Pass PMI's PMP Exam--on Your First Try!},
+  author={Mulcahy, R. and Diethelm, L.},
+  isbn={9781932735413},
+  lccn={2011924083},
+  url={http://books.google.fr/books?id=a1Y5XwAACAAJ},
+  year={2011},
+  publisher={Rmc Pubns Incorporated}
+}
